--- a/src/assets/css/chatGPTSidebar.css
+++ b/src/assets/css/chatGPTSidebar.css
@@ -11,6 +11,13 @@
     background-color: transparent;
     border-color: white;
     font-family: "Source Code Pro Light", sans-serif;
+    padding-right: 65%;
+}
+
+.create-btn .el-icon {
+    margin-right: 15%;
+    margin-bottom: 3%;
+    font-size: 14px;
 }
 
 .create-btn:hover,
@@ -37,7 +44,6 @@
     user-select: none; /* 不显示输入光标 */
     display: flex;
     align-items: center; /* 垂直居中 */
-    justify-content: center; /* 水平居中 */
     font-size: 14px;
     margin: 8px 0;
     padding: 10px;
@@ -57,4 +63,42 @@
     background-color: #1ab2b2;
     color: white;
     border-radius: 4px;
+}
+
+.icon-chat-round {
+    vertical-align: middle; /* 垂直居中对齐 */
+    margin-right: 6%; /* 调整图标与文本之间的间距 */
+    font-size: 14px;
+}
+
+.icon-edit-pen {
+    vertical-align: middle; /* 垂直居中对齐 */
+    margin-left: 9%; /* 调整图标与文本之间的间距 */
+    position: fixed;
+    font-size: 14px;
+    color: #cecece;
+}
+
+.icon-edit-pen:hover,
+.icon-edit-pen:active{
+    color: white;
+}
+
+.icon-delete {
+    vertical-align: middle; /* 垂直居中对齐 */
+    position: fixed;
+    margin-left: 10.5%; /* 调整图标与文本之间的间距 */
+    font-size: 14px;
+    color: #cecece;
+}
+
+.icon-delete:hover,
+.icon-delete:active{
+    color: white;
+}
+
+.input-edit-name {
+    position: fixed;
+    margin-left: 1.5%;
+    width: 7vw;
 }
