--- a/src/assets/css/chatGPTSidebar.css
+++ b/src/assets/css/chatGPTSidebar.css
@@ -101,4 +101,12 @@
     position: fixed;
     margin-left: 1.5%;
     width: 7vw;
+    height: auto;
+}
+
+.span-conversation-name-length {
+    width: 7vw; /* 适应你的容器宽度 */
+    overflow: hidden; /* 隐藏溢出的内容 */
+    white-space: nowrap; /* 防止文本换行 */
+    text-overflow: ellipsis; /* 用省略号表示溢出内容 */
 }
