--- a/src/assets/css/chatGPTSidebar.css
+++ b/src/assets/css/chatGPTSidebar.css
@@ -1,7 +1,7 @@
 .sidebar {
     height: 100%;
     box-sizing: border-box;
-    background: darkcyan;
+    background: #00AAAD;
     padding: 10px;
 }
 
