--- a/src/assets/css/navbar/nav.css
+++ b/src/assets/css/navbar/nav.css
@@ -84,7 +84,7 @@ animation-fill-mode:forwards; /* Standard Syntax */
 /* For main nav links */
 .nav > ul > li > a  {
     text-decoration:none;
-    font-family:"Source Code Pro Light sans-serif";
+    font-family: "Source Code Pro Light", sans-serif;
     font-size:13px;
     display:block;
     width:100%;
@@ -100,42 +100,46 @@ animation-fill-mode:forwards; /* Standard Syntax */
 
 /* For appearance of sublevel (first and so on) menus appear */
 .nav > ul > li > a:hover + .sublevel, .sublevel:hover, .sublevel > li > a:hover + .sublevel{
-display:block;
+    display:block;
 }
 
 /* For the effect with which first sublevel menu appear */
 .nav > ul > li > a:hover + .sublevel {
--webkit-animation:dropdown 0.6s; /* For Chrome 4.0+, Safari 4.0+ and Opera 15.0 */
--webkit-animation-fill-mode:forwards; /* For Chrome 4.0+, Safari 4.0+ and Opera 15.0 */
--moz-animation:dropdown 0.6s; /* For Firefox 5.0+ */ 
--moz-animation-fill-mode:forwards; /* For Firefox 5.0+ */
--o-animation:dropdown 0.6s; /* For Opera 12.0+ */
--o-animation-fill-mode:forwards; /* For Opera 12.0+ */
-animation:dropdown 0.6s; /* Standard Syntax */
-animation-fill-mode:forwards; /* Standard Syntax */
+    -webkit-animation:dropdown 0.6s; /* For Chrome 4.0+, Safari 4.0+ and Opera 15.0 */
+    -webkit-animation-fill-mode:forwards; /* For Chrome 4.0+, Safari 4.0+ and Opera 15.0 */
+    -moz-animation:dropdown 0.6s; /* For Firefox 5.0+ */
+    -moz-animation-fill-mode:forwards; /* For Firefox 5.0+ */
+    -o-animation:dropdown 0.6s; /* For Opera 12.0+ */
+    -o-animation-fill-mode:forwards; /* For Opera 12.0+ */
+    animation:dropdown 0.6s; /* Standard Syntax */
+    animation-fill-mode:forwards; /* Standard Syntax */
 }
 
 /* For the effect with which these sublevel menus appear */
 .sublevel > li > a:hover + .sublevel {
--webkit-animation:subdropdown 0.6s; /* For Chrome 4.0+, Safari 4.0+ and Opera 15.0 */
--webkit-animation-fill-mode:forwards; /* For Chrome 4.0+, Safari 4.0+ and Opera 15.0 */
--moz-animation:subdropdown 0.6s; /* For Firefox 5.0+ */ 
--moz-animation-fill-mode:forwards; /* For Firefox 5.0+ */
--o-animation:subdropdown 0.6s; /* For Opera 12.0+ */
--o-animation-fill-mode:forwards; /* For Opera 12.0+ */
-animation:subdropdown 0.6s; /* Standard Syntax */
-animation-fill-mode:forwards; /* Standard Syntax */
+    -webkit-animation:subdropdown 0.6s; /* For Chrome 4.0+, Safari 4.0+ and Opera 15.0 */
+    -webkit-animation-fill-mode:forwards; /* For Chrome 4.0+, Safari 4.0+ and Opera 15.0 */
+    -moz-animation:subdropdown 0.6s; /* For Firefox 5.0+ */
+    -moz-animation-fill-mode:forwards; /* For Firefox 5.0+ */
+    -o-animation:subdropdown 0.6s; /* For Opera 12.0+ */
+    -o-animation-fill-mode:forwards; /* For Opera 12.0+ */
+    animation:subdropdown 0.6s; /* Standard Syntax */
+    animation-fill-mode:forwards; /* Standard Syntax */
 }
 
 /* For framing each sublevel menu (general) */
 .sublevel {
-display:none;
-position:absolute;
-padding:0px;
--webkit-box-shadow:0px 0px 1px 1px rgba(0,0,0,0.2); /* For Chrome 4.0 + and Safari 3.5+ */
--moz-box-shadow:0px 0px 1px 1px rgba(0,0,0,0.2); /* For Firefox 3.5*/
-box-shadow:0px 0px 1px 1px rgba(0,0,0,0.2); /* For Firefox 4+, Opera and IE9 */
-z-index:100;
+    display:none;
+    position:absolute;
+    padding:0;
+    -webkit-box-shadow:0 0 1px 1px rgba(0,0,0,0.2); /* For Chrome 4.0 + and Safari 3.5+ */
+    -moz-box-shadow:0 0 1px 1px rgba(0,0,0,0.2); /* For Firefox 3.5*/
+    box-shadow:0 0 1px 1px rgba(0,0,0,0.2); /* For Firefox 4+, Opera and IE9 */
+    z-index:100;
+}
+
+.sublevel li {
+    width: 7.8vw !important; /* 设置宽度为 100 像素，根据你的需求调整 */
 }
 
 /* For right arrows, associated with the links of the sublevel menu which itself has a sublevel of menu  */
@@ -166,101 +170,101 @@ width:200px;
 
 /* For sublevel menu links */
 .menu > li >a {
-text-decoration:none;
-font-family:"Source Code Pro Light sans-serif";
-font-size:13px;
-display:block;
-width:100%;
-padding:17px 0px;
-text-align:center;
--webkit-transition:background 0.6s, color 0.6s; /* For Chrome 4.0+ and Safari 3.1 to 6.0 */
--moz-transition:background 0.6s; /* For firefox 4.0+ */
--o-transition:background 0.6s; /* For Opera 10.5+ */
-transition:background 0.6s, color 0.6s;
-letter-spacing:0.3px;
+    text-decoration:none;
+    font-family: "Source Code Pro Light", sans-serif;
+    font-size:13px;
+    display:block;
+    width:100%;
+    padding:17px 0px;
+    text-align:center;
+    -webkit-transition:background 0.6s, color 0.6s; /* For Chrome 4.0+ and Safari 3.1 to 6.0 */
+    -moz-transition:background 0.6s; /* For firefox 4.0+ */
+    -o-transition:background 0.6s; /* For Opera 10.5+ */
+    transition:background 0.6s, color 0.6s;
+    letter-spacing:0.3px;
 
 }
 
 /* For sublevel menus after the first level submenu */
 .menu > li > .menu {
-position:absolute;
-left:200px;
-margin-top:-50px;
+    position:absolute;
+    left:200px;
+    margin-top:-50px;
 }
 
 /* For framing a megamenu */
 .megamenu {
-width:100%;
-background-color:#ffffff;
-position:absolute;
-left:0px;
-margin:0px;
-padding:0px;
+    width:100%;
+    background-color:#ffffff;
+    position:absolute;
+    left:0px;
+    margin:0px;
+    padding:0px;
 }
 
 /* For different groups of item lists */
 .megamenu>div>ul {
-float:left;
-overflow:hidden;
-padding:5px 0px;
-position:relative;
-width:20%;
+    float:left;
+    overflow:hidden;
+    padding:5px 0px;
+    position:relative;
+    width:20%;
 }
 
 /* For framing Items in a group included in megamenu */ 
 .megamenu>div>ul>li {
-text-align:center;
-list-style-type:none;
+    text-align:center;
+    list-style-type:none;
 }
 
 /* For item links included in megamenu */
 .megamenu>div>ul>li>a {
-display:inline-block;
-padding:10px 20px;
-text-decoration:none;
-color:#888;
-    font-family:"Source Code Pro Light sans-serif";
-font-size:13px;
-letter-spacing:0.5px;
--webkit-transition:background 0.6s, color 0.6s; /* For Chrome 4.0+ and Safari 3.1 to 6.0 */
--moz-transition:background 0.6s, color 0.6s; /* For firefox 4.0+ */
--o-transition:background 0.6s, color 0.6s; /* For Opera 10.5+ */
-transition:background 0.6s, color 0.6s;
+    display:inline-block;
+    padding:10px 20px;
+    text-decoration:none;
+    color:#888;
+    font-family: "Source Code Pro Light", sans-serif;
+    font-size:13px;
+    letter-spacing:0.5px;
+    -webkit-transition:background 0.6s, color 0.6s; /* For Chrome 4.0+ and Safari 3.1 to 6.0 */
+    -moz-transition:background 0.6s, color 0.6s; /* For firefox 4.0+ */
+    -o-transition:background 0.6s, color 0.6s; /* For Opera 10.5+ */
+    transition:background 0.6s, color 0.6s;
 }
 
 /* For group heading in megamenu */
 .megamenu h3 {
-    font-family:"Source Code Pro Light sans-serif";
-font-size:12px;
-letter-spacing:0.5px;
-text-align:center;
+    font-family: "Source Code Pro Light", sans-serif;
+    font-size:12px;
+    letter-spacing:0.5px;
+    text-align:center;
 }
 
 /* For the base of different groups in megamenu */
 .holder-1 {
-padding:0px;
-background-color:transparent;
-overflow:hidden;
-width:100%;
+    padding:0px;
+    background-color:transparent;
+    overflow:hidden;
+    width:100%;
 }
 
 /* For the base of the long paragraph in megamenu */
 .holder-2 {
-padding:0px;
-width:100%;
-margin:0px;
+    padding:0px;
+    width:100%;
+    margin:0px;
 }
 
 /* For the paragraph in megamenu */
 .holder-2>p {
-padding:20px;
-margin:0px;
-letter-spacing:0.7px;
-text-align:justify;
-color:#888888;
-    font-family:"Source Code Pro Light sans-serif";
-font-size:13px;
-line-height:20px;
+    padding:20px;
+    margin:0px;
+    letter-spacing:0.7px;
+    text-align:justify;
+    color:#888888;
+    font-family: "Source Code Pro Light", sans-serif;
+    font-size:13px;
+    line-height:20px;
 }
 
 /* Below is the navbar coding for the Responsive State */
