--- a/src/assets/css/chatGPT.css
+++ b/src/assets/css/chatGPT.css
@@ -10,6 +10,19 @@
     position: fixed;
 }
 
+.night-mode-chat-container {
+    width: 100%; /* 设置容器宽度为100% */
+    box-sizing: border-box; /* 设置盒模型为border-box，确保内边距和边框不会增加容器的宽度 */
+    height: 96vh;
+    padding-top: 0.9%;
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 10px #ccc;
+    font-family: "Source Code Pro Light", sans-serif;
+    color:#fff;
+    background-color:#1F5247;
+    position: fixed;
+}
+
 .chat-container-message {
     box-sizing: border-box;
     height: 100%;
@@ -64,6 +77,30 @@
     border-bottom: 8px solid transparent;
 }
 
+.night-mode-question-info-content {
+    max-width: 70%;
+    padding: 10px;
+    font-size: 14px;
+    float: right;
+    color: #fff;
+    margin-right: 10px;
+    position: relative;
+    margin-top: 8px;
+    background: #333;
+    text-align: left;
+    border-radius: 8px;
+}
+
+.night-mode-question-info-content::after {
+    position: absolute;
+    right: -8px;
+    top: 8px;
+    content: '';
+    border-left: 10px solid #333;
+    border-top: 8px solid transparent;
+    border-bottom: 8px solid transparent;
+}
+
 .chat-reply {
     justify-content: flex-start;
     display: flex;
@@ -94,10 +131,40 @@
     border-bottom: 8px solid transparent;
 }
 
+.night-mode-reply-info-content {
+    padding: 10px;
+    font-size: 14px;
+    color: #fff;
+    background: #333;
+    position: relative;
+    margin-top: 8px;
+    border-radius: 8px;
+}
+
+.night-mode-reply-info-content::before {
+    position: absolute;
+    left: -8px;
+    top: 8px;
+    content: '';
+    border-right: 10px solid #333;
+    border-top: 8px solid transparent;
+    border-bottom: 8px solid transparent;
+}
+
 .chat-input {
     cursor: pointer;
     user-select: none; /* 不显示输入光标 */
     background: whitesmoke;
+    display: flex;
+    align-items: center;
+    border: 1px solid #ccc;
+    box-shadow: 2px 2px 10px #ccc;
+}
+
+.night-mode-chat-input {
+    cursor: pointer;
+    user-select: none; /* 不显示输入光标 */
+    background: #333;
     display: flex;
     align-items: center;
     border: 1px solid #ccc;
