--- a/src/assets/css/chatGPT.css
+++ b/src/assets/css/chatGPT.css
@@ -19,7 +19,7 @@
     box-shadow: 2px 2px 10px #ccc;
     font-family: "Source Code Pro Light", sans-serif;
     color:#fff;
-    background-color:#1F5247;
+    background-color:#18392F;
     position: fixed;
 }
 
@@ -86,7 +86,7 @@
     margin-right: 10px;
     position: relative;
     margin-top: 8px;
-    background: #333;
+    background: #324B4B;
     text-align: left;
     border-radius: 8px;
 }
@@ -96,7 +96,7 @@
     right: -8px;
     top: 8px;
     content: '';
-    border-left: 10px solid #333;
+    border-left: 10px solid #324B4B;
     border-top: 8px solid transparent;
     border-bottom: 8px solid transparent;
 }
@@ -135,7 +135,7 @@
     padding: 10px;
     font-size: 14px;
     color: #fff;
-    background: #333;
+    background: #324B4B;
     position: relative;
     margin-top: 8px;
     border-radius: 8px;
@@ -146,7 +146,7 @@
     left: -8px;
     top: 8px;
     content: '';
-    border-right: 10px solid #333;
+    border-right: 10px solid #324B4B;
     border-top: 8px solid transparent;
     border-bottom: 8px solid transparent;
 }
