解决夜间模式下修改会话名称以及笔记专题标题的显示 BUG

--- a/src/assets/css/chatGPTSidebar.css
+++ b/src/assets/css/chatGPTSidebar.css
@@ -166,3 +166,7 @@
     white-space: nowrap; /* 防止文本换行 */
     text-overflow: ellipsis; /* 用省略号表示溢出内容 */
 }
+
+.anti-transparent {
+    background: #324B4B;
+}
